# gnn-anomaly-detection-bi

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: ARCHITECTURE.md  EXPERIMENTAL_PROTOCOL.md  METHOD_OVERVIEW.md  PROJECT_SCOPE.md  REPRODUCTION_GUIDE.md  RESULTS_SUMMARY.md  SCORE_TABLE_SCHEMA.md  WORK_ALIGNMENT.md
examples/: README.md  mini_scores.csv  run_demo.py
models/: README.md
results/: README.md
results/benchmark/: guarded_selector_deltas.csv  guarded_selector_summary.csv  main_benchmark_by_dataset.csv  main_benchmark_summary.csv  replay_check.csv  second_benchmark_summary.csv
scripts/: replay_guarded_selector.py  summarize_results.py
src/adamm_gama_hybrid/: __init__.py  _guarded_core.py  _superlearner.py  functional_hybrid.py  guarded_selector.py  hierarchical_hybrid.py  metrics.py
